- step page alignment with responsive fixes

--- a/pricing-meter-frontEnd/src/app/Component/agent/register-step-one/register-step-one.component.scss
+++ b/pricing-meter-frontEnd/src/app/Component/agent/register-step-one/register-step-one.component.scss
@@ -1,6 +1,6 @@
 .app-agent-register {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 50% 50%;
   width: 100%;
   height: 100vh;
 
@@ -125,7 +125,86 @@
       width: 100%;
       height: calc(100vh - 250px);
     }
+    .bottom-control {
+      display: flex;
+      justify-content: center;
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 30px;
+      .dot-nav {
+        display: inline-block;
+        width: 20px;
+        height: 2px;
+        background: #E0E0E0;
+        margin-right: 5px;
+        &.dot-active {
+          background: #006AFF;
+        }
+      }
+    }
   }
 }
 
 
+@media (max-width:1200px) {
+  .app-agent-register .left-sec .form-content form.register-form{
+    width: auto;
+  }
+  .app-agent-register .right-sec .right-header {
+    top: auto;
+  }
+}
+
+@media (max-width:1030px) {
+  .app-agent-register .right-sec .right-header {
+    br {
+      display:none;
+    }
+  }
+}
+
+@media (max-width:980px) and (min-width: 768px) {
+  .app-agent-register .left-sec {
+    padding: 20px;
+  }
+
+  .app-agent-register .right-sec .right-header {
+    padding: 20px;
+  }
+}
+
+@media (max-width:767px) {
+  .app-agent-register .right-sec .right-header {
+    padding: 20px;
+  }
+  .app-agent-register {
+    display: flex;
+    flex-direction: column-reverse;
+    overflow: auto;
+  }
+
+  .app-agent-register .right-sec {
+    height: 90vh;
+  }
+
+  .app-agent-register .left-sec .logo-header {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5px;
+  }
+
+  .app-agent-register .left-sec .form-content .form-title {
+    margin-bottom: 15px;
+    font-size: 25px;
+  }
+}
+
+@media (max-width:480px) {
+  .app-agent-register .right-sec .right-header {
+    padding: 20px;
+    margin-bottom: 0;
+    font-size: 27px;
+    line-height: 36px;
+  }
+}
