--- a/pricing-meter-frontEnd/src/styles.scss
+++ b/pricing-meter-frontEnd/src/styles.scss
@@ -156,7 +156,7 @@ button {
   cursor: pointer;
 
   &:focus {
-    outline: none;
+    outline: none !important;
   }
 }
 
